kubernetes/multi/resources/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: flask
  name: flask
  namespace: aqra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flask
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/aqra-network: "true"
        io.kompose.service: flask
    spec:
      containers:
        - envFrom:
            - secretRef:
                name:
                  flask-secret
          image: aqra-flask
          imagePullPolicy: Never
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /healthz/live
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 60
          name: flask
          ports:
            - containerPort: 5000
          resources: { }
          volumeMounts:
            - mountPath: /var/api
              name: flaskdata
      securityContext:
        runAsNonRoot: true
      serviceAccountName: ""
      volumes:
        - name: flaskdata
          persistentVolumeClaim:
            claimName: flaskdata-pvc
