kubernetes/multi/resources/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: flask
  name: flask
  namespace: aqra
spec:
  ports:
    - name: flask
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: flask
