kubernetes/multi/resources/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/multi/docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: nginx
  name: nginx
  namespace: aqra
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: nginx
